# bevy-uix

./: .gitignore  Cargo.toml
assets/: test.uix.xml
examples/: hello_world.rs
src/: asset.rs  lib.rs  loader.rs  parser.rs
