[package]
name = "bevy-uix"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = "0.16.1"
bevy_asset = "0.16.1"
bevy_color = "0.16.2"
bevy_ecs = "0.16.1"
bevy_reflect = "0.16.1"
bevy_scene = "0.16.1"
bevy_tasks = "0.16.1"
bevy_text = { version = "0.16.1", features = ["default_font"] }
bevy_ui = "0.16.1"
roxmltree = "0.20.0"
serde = "1.0.219"
serde-xml-rs = "0.8.1"
thiserror = "2.0.16"

[dev-dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "file_watcher"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
